--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<title>Rock Paper Scissors</title>
 </head>
 <body>
+	<button name="rock" class="rock">Rock</button>
+	<button name="paper" class="paper">Paper</button>
+	<button name="scissors" class="scissors">Scissors</button>
+	<div class="results"></div>
 	<script src="rpsscript.js">
-		
+	
 	</script>
 </body>
 </html>
